
buildscript {
    ext { springBootVersion = '2.5.6'
	      hibernateVersion = '5.11.0.Final'
		  httpClientVersion = '4.5.11'
		  swaggerVersion = '3.0.0'
		  jasyptVersion = '3.0.4'
		 }
		repositories {
			mavenCentral()	
			 maven {
        		url "https://packages.atlassian.com/mvn/maven-external/"
    		}	
		}
    dependencies { classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") }
}

plugins {
  id 'org.springframework.boot' version "${springBootVersion}"
  id 'io.spring.dependency-management' version '1.0.11.RELEASE'
  id 'java'
  id "com.gorylenko.gradle-git-properties" version '2.3.1'
  id 'de.undercouch.download' version '4.1.2'
  id 'eclipse'
  id 'jacoco'
  id 'org.sonarqube' version '3.3'
}

sonarqube {
  properties {
    property "sonar.projectKey", "turing-app"
    property "sonar.organization", "viglet-turing"
    property "sonar.host.url", "https://sonarcloud.io"
    property "sonar.cpd.exclusions", "**/persistence/dto/**,**/persistence/model/**"
  }
}

jar {
    archiveBaseName = 'viglet-turing'
    archiveVersion =  '0.3.5'
}

eclipse {
    classpath {
        file {
            whenMerged {
                def src = entries.find { it.path == 'src/main/resources' }
                src.excludes = ['**']
            }
        }
    }
}

gitProperties {
    extProperty = 'gitProps' // git properties will be put in a map at project.ext.gitProps
}

bootJar {
	launchScript() // executable jar
    manifest {
    	attributes(    
        'Implementation-Version': "${-> project.jar.version + '-' + project.ext.gitProps['git.commit.id.abbrev']}"
    	)
  	} 
}

repositories {
	mavenCentral()
	 maven {
        		url "https://packages.atlassian.com/mvn/maven-external/"
    		}	
}

group = 'com.viglet.turing'
sourceCompatibility = 14
targetCompatibility = 14

tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
}

task stage(dependsOn: ['build', 'clean'])

build.mustRunAfter clean

if (!project.hasProperty('no-ui')) {
	compileJava.dependsOn(':turing-ui:build'); 
}

configurations {
    all*.exclude group: 'xml-apis'
}

dependencies {
	compileOnly group: 'javax.servlet', name: 'servlet-api', version: '2.5'

	implementation (group: 'org.apache.hadoop', name: 'hadoop-common', version: '3.3.1') {
		exclude(module: 'guava')
		exclude(module: 'commons-logging')
		exclude(module: 'log4j')
		exclude(module: 'slf4j-api')
		exclude(module: 'slf4j-log4j12')
		exclude(module: 'jackson-mapper-asl')
		exclude(module: 'jackson-core-asl')
		exclude(module: 'jersey-core')
		exclude(module: 'jersey-json')
		exclude(module: 'jersey-server')				
		exclude(module: 'jasper-runtime')
		exclude(module: 'jasper-compiler')
		exclude(module: 'servlet-api')
		exclude(module: 'jsp-api')
		exclude(module: 'commons-el')
	
	}
	
	implementation (group: 'org.apache.hadoop', name: 'hadoop-hdfs', version: '3.3.1') {
		exclude(module: 'jackson-mapper-asl')
		exclude(module: 'jackson-core-asl')
		exclude(module: 'jersey-core')
		exclude(module: 'jersey-json')
		exclude(module: 'jersey-server')				
		exclude(module: 'jasper-runtime')
		exclude(module: 'jasper-compiler')
		exclude(module: 'servlet-api')
		exclude(module: 'jsp-api')
		exclude(module: 'log4j')
	}
	implementation (group: 'org.apache.hadoop', name: 'hadoop-auth', version: '3.3.1') {
		exclude(module: 'commons-logging')
		exclude(module: 'log4j')
		exclude(module: 'slf4j-api')
		exclude(module: 'slf4j-log4j12')
		exclude(module: 'jackson-mapper-asl')
		exclude(module: 'jackson-core-asl')
		exclude(module: 'jersey-core')
		exclude(module: 'jersey-json')
		exclude(module: 'jersey-server')				
		exclude(module: 'jasper-runtime')
		exclude(module: 'jasper-compiler')
		exclude(module: 'servlet-api')
		exclude(module: 'jsp-api')
	}
	implementation (group: 'org.apache.hadoop', name: 'hadoop-core', version: '1.2.1') {
		exclude(module: 'jersey-core')
		exclude(module: 'jersey-json')
		exclude(module: 'jersey-server')
		exclude(module: 'jackson-mapper-asl')
		exclude(module: 'jackson-core-asl')
		exclude(module: 'hsqldb')
		exclude(module: 'commons-el')
	}
		
 	// Spring Boot
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: "${springBootVersion}"
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version:"${springBootVersion}"
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-parent', version:"${springBootVersion}"
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-activemq', version:"${springBootVersion}"   
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version:"${springBootVersion}"
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version:"${springBootVersion}"
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache', version:"${springBootVersion}"
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version:"${springBootVersion}"

	// SolrJ
	implementation (group: 'org.apache.solr', name: 'solr-solrj', version: '8.10.1') {
		exclude(module: 'xml-apis')
	}

   	// Oracle	
	implementation group: 'com.oracle.ojdbc', name: 'ojdbc8', version: '19.3.0.0'
	
	// Jasypt
	implementation group: 'com.github.ulisesbocchio', name: 'jasypt-spring-boot-starter', version: "${jasyptVersion}"
	
	// Spring
  	implementation group: 'org.springframework', name: 'spring-test', version: '5.3.13'

 	// Jackson
   	implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-hibernate5', version: '2.13.0'
   	  	
  	// H2
    implementation group: 'com.h2database', name: 'h2', version:'1.4.200'
    
    // MariaDB
    implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.4'         
    
    // PostgreSQL
	implementation group: 'org.postgresql', name: 'postgresql', version: '42.3.1'
        
    // JSON
    implementation group: 'org.json', name: 'json', version:'20210307'
      
    // CoreNLP
    implementation group: 'edu.stanford.nlp', name: 'stanford-corenlp', version:'4.3.1'
    
    //ASM
    implementation group: 'asm', name: 'asm', version:'4.0_RC2'
    
    // OpenNLP
    implementation group: 'org.apache.opennlp', name: 'opennlp-tools', version:'1.9.4'
    
    // Apache Commons
    implementation group: 'commons-io', name: 'commons-io', version:'2.11.0'
    implementation group: 'commons-lang', name: 'commons-lang', version:'2.6'
  
    // EhCache
    implementation group: 'net.sf.ehcache', name: 'ehcache', version:'2.10.10.0.95'
    
    // Tika
    implementation group: 'org.apache.tika', name: 'tika-core', version:'2.1.0'
    implementation group: 'org.apache.tika', name: 'tika-parsers', version:'2.1.0'
	implementation group: 'org.apache.tika', name: 'tika-parser-pdf-module', version: '2.1.0'
	implementation group: 'org.apache.tika', name: 'tika-parser-ocr-module', version: '2.1.0'	
    implementation group: 'com.levigo.jbig2', name: 'levigo-jbig2-imageio', version:'2.0'
    implementation group: 'com.github.jai-imageio', name: 'jai-imageio-core', version:'1.4.0'
    implementation group: 'com.github.jai-imageio', name: 'jai-imageio-jpeg2000', version:'1.4.0'

    //ActiveMQ using KahaDB
    implementation group: 'org.apache.activemq', name: 'activemq-kahadb-store', version: '5.16.3'
	
	// Swagger
	implementation group: 'io.springfox', name: 'springfox-swagger2', version: "${swaggerVersion}"
	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: "${swaggerVersion}"	
	
	// Schema.org
	implementation group: 'com.squins.google.fork.schema-org-client', name: 'schema-org-client', version: '1.0.1'
	
	//PDFBox
	implementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.24'
	
	//Language Tool
	implementation group: 'org.languagetool', name: 'language-all', version: '5.5'
	
	testImplementation('org.springframework.boot:spring-boot-starter-test')
}

jacoco {
    toolVersion = "0.8.6"
}

test {
	useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
    }
    
 	jacocoTestReport {
    	reports {
        	xml.enabled true
        	html.enabled false
    	}
	}
   
	check.dependsOn jacocoTestReport   

}